compiler/testData/compileKotlinAgainstCustomBinaries/contextualDeclarationUse/output.fir.txt
compiler/testData/compileKotlinAgainstCustomBinaries/contextualDeclarationUse/contextualDeclarationUse.kt:6:9: error: to call contextual declarations, specify the '-Xcontext-parameters' compiler option.
        f()
        ^
compiler/testData/compileKotlinAgainstCustomBinaries/contextualDeclarationUse/contextualDeclarationUse.kt:8:11: error: to call contextual declarations, specify the '-Xcontext-parameters' compiler option.
        a.p
          ^
compiler/testData/compileKotlinAgainstCustomBinaries/contextualDeclarationUse/contextualDeclarationUse.kt:9:11: error: to call contextual declarations, specify the '-Xcontext-parameters' compiler option.
        a.m()
          ^
compiler/testData/compileKotlinAgainstCustomBinaries/contextualDeclarationUse/contextualDeclarationUse.kt:10:9: error: to call contextual declarations, specify the '-Xcontext-parameters' compiler option.
        p
        ^
COMPILATION_ERROR
